# teramind

./: .env.example  .gitignore  LICENSE  Makefile  README.md  main_spark.ipynb  pyproject.toml  requirements.txt
PySpark/: game_of_thrones.ipynb  text_classification1.ipynb  text_classification2.ipynb  word2_vec.ipynb
app/: report_copy.ipynb
app/db/: connection.py
app/services/: logger.py
